
Compiled mexw32 and mexw64 with OpenMP support.
------------------------------------------------------------------------
r359 | gaser | 2010-09-01 10:30:23

M      CHANGES.txt
M      sanlm_float.c
M      AmapMex.mexw64
M      AmapMex.mexw32
M      compile.m

Some cosmetic changes in sanlm_float.c.
------------------------------------------------------------------------
r360 | gaser | 2010-09-01 14:45:52

A      sanlmMex.mexw32
A      sanlmMex.mexglx
A      sanlmMex.mexmaci64
M      sanlm_float.c
M      AmapMex.mexw64
A      sanlmMex.mexmaci
M      AmapMex.mexw32
A      sanlmMex.mexa64
A      sanlmMex.mexw64

Some cosmetic changes in sanlm_float.c.
------------------------------------------------------------------------
r360 | gaser | 2010-09-01 14:48:36

M      AmapMex.mexmaci64
M      Makefile.vbm
M      sanlmMex.mexw32
M      AmapMex.mexmaci
M      AmapMex.mexa64
M      Kmeans.c
M      AmapMex.mexw64
M      AmapMex.mexw32
M      AmapMex.mexglx
M      sanlmMex.mexw64

Improved bias correction in Kmeans.c that leads to better segmentation
esp. of subcortical structures.
------------------------------------------------------------------------
r361 | gaser | 2010-09-03 09:12:14

M      Bayes.c
M      BayesMex.c
M      cg_vbm8_brainmask_ui.m
M      BayesMex.m
M      WarpPriors.c
M      Kmeans.c
M      cg_vbm8_brainmask.m
M      KmeansMex.c

(1) Some cosmetic changes to Kmeans.c
(2) cg_vbm8_brainmask.m is now based on an initial segmentation 
    based on a Bayesian approach with warped priors.
(3) Updated cg_vbm8_brainmask_ui.m to consider changes above.
(4) Updated WarpPriors.c to allow upsampling of flow field.
(5) Updated Bayes.c to include warping of priors.

------------------------------------------------------------------------
r362 | gaser | 2010-09-07 21:59:04

M       cg_vbm8_brainmask.m

Modified thresholds for inital opening in cg_vbm8_brainmask.m
------------------------------------------------------------------------
r363 | gaser | 2010-09-07 23:50:06